Add carrierwave, ability to upload images, and add validation to organization model to require a log be uploaded

--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -48,7 +48,7 @@
 
   <div class="field">
     <%= form.label :logo %>
-    <%= form.text_field :logo, id: :organization_logo %>
+    <%= form.file_field :logo, id: :organization_logo %>
   </div>
 
   <div class="field">
