--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -7,5 +7,15 @@
    <%# puts "=========================erb===========" %>
   <%# puts article %>
         <h5><a href="<%=article.url%>"><%= article.title%></a></h5>
+        <p>
+        <span>
+          <%= (article.publishedAt < 5.days.ago) ?
+          DateTime.parse(article.publishedAt).to_formatted_s(:long) :
+          time_ago_in_words(article.publishedAt)%>
+        </span>
+        - Source: <strong><%= article.name %></strong>
+        </p>
+        <p><%= article.description%></p>
+        <hr />
   <% end %>
 </div>
