--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -25,7 +25,7 @@
         <div class="card-body">
           <!-- TODO this link_to only re-renders the page. it should link to the organization show page given the id parameter. -->
           <p class="card-title"><%= link_to organization.name %></p>
-          <p class="card-text"><%= organization.tech_team_size %> employees</p>
+          <p class="card-text"><%= organization.employees %> employees</p>
         </div>
       </div>
     </div>
