--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -44,5 +44,10 @@
   <%= @organization.published %>
 </p>
 
+<p><h3>Update Organization</h3></p>
+<%= render 'edit_form' %>
+
+<p><%= link_to 'Delete Organization', organization_path(@organization),
+                        method: :delete, data: {confirm: 'Are you sure?'} %></p>
 
 <%= link_to 'Back', organizations_path %>
