working on edit for event but not done yet

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -23,6 +23,9 @@
   <%= @event.end_time %>
 </p>
 
+<%= link_to 'Edit', edit_event_path(@event) %>
+<%#= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %>
+
 <!--
 Commented out below links as they are not yet set up
 <%#= link_to 'Edit', edit_event_path(@event) %> |
