--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,14 +17,12 @@ $('#calendar').fullCalendar({
 });
 </script>
 
-<table>
+<table class="table table-striped">
   <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Location</th>
-      <th>Date</th>
-      <th colspan="3"></th>
+    <tr class="">
+      <th scope="col">Event</th>
+      <th scope="col">Location</th>
+      <th scope="col">Time</th>
     </tr>
   </thead>
 
@@ -32,9 +30,8 @@ $('#calendar').fullCalendar({
     <% @events.each do |event| %>
       <tr>
         <td><%= link_to "#{event.title}", event %></td>
-        <td><%= event.description %></td>
         <td><%= event.location %></td>
-        <td><%= event.start_time.strftime("%b %d %l:00") %></td>
+        <td><%= event.start_time.strftime("%b %d %l%p") %></td>
         <td><%#= link_to 'Edit', edit_event_path(event) %></td>
         <!-- edit event path is not yet set up -->
         <td><%#= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
