--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -43,11 +43,11 @@
   <strong>Published:</strong>
   <%= @organization.published %>
 </p>
+<% if can?(:crud, @organization) %>
+  <p><h3>Update Organization</h3></p>
+  <%= render 'edit_form' %>
 
-<p><h3>Update Organization</h3></p>
-<%= render 'edit_form' %>
-
-<p><%= link_to 'Delete Organization', organization_path(@organization),
-                        method: :delete, data: {confirm: 'Are you sure?'} %></p>
-
+  <p><%= link_to 'Delete Organization', organization_path(@organization),
+                          method: :delete, data: {confirm: 'Are you sure?'} %></p>
+<% end %>
 <%= link_to 'Back', organizations_path %>
