--- a/app/assets/stylesheets/index.css
+++ b/app/assets/stylesheets/index.css
@@ -26,8 +26,14 @@ body {
   width: 100%;
 }
 
+.card :hover {
+  cursor: pointer;
+}
+
 .card > img {
-  width: 200px;
+  object-fit: cover;
+  max-width: 200px;
+  max-height: 140px;
   margin: 10px 20px;
 }
 
