--- a/app/views/admin/organizations/index.html.erb
+++ b/app/views/admin/organizations/index.html.erb
@@ -1,6 +1,16 @@
+<div class="row">
+  <div class="section-header text-center">
+    <h2 class="title">Organization (Admin)</h2>
+  </div>
+
 <%= render 'form', organization: @organization %>
 
-<h1>Organizations</h1>
+<hr>
+
+<div class="section-header text-center">
+  <h2 class="title">Organizations list (Admin)</h2>
+</div>
+
 <table>
   <tbody>
     <tr>
@@ -21,3 +31,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
