--- a/app/views/organizations/_form.html.erb
+++ b/app/views/organizations/_form.html.erb
@@ -11,52 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :organization_name %>
+  <fieldset>
+    <%= form.text_field :name, class: "form-control", placeholder: "Name" %>
+  </fieldset>
+  <fieldset>
+    <%= form.text_field :address, class: "form-control", placeholder: "Address" %>
+  </fieldset>
+  <fieldset>
+    <%= form.text_area :overview, class: "form-control", placeholder: "Overview" %>
+  </fieldset>
+  <fieldset>
+    <%= form.number_field :employees, class: "form-control", placeholder: "Employees" %>
+  </fieldset>
+  <fieldset>
+    <%= form.number_field :tech_team_size, class: "form-control", placeholder: "Tech team size" %>
+  </fieldset>
+  <fieldset>
+    <%= form.text_field :website, class: "form-control", placeholder: "Website" %>
+  </fieldset>
+  <fieldset>
+    <%= form.text_field :twitter, class: "form-control", placeholder: "Twitter" %>
+  </fieldset>
+  <fieldset>
+    <%= form.file_field :logo, class: "form-control", placeholder: "Logo" %>
+  </fieldset>
+  <fieldset>
+    <%= form.check_box :published, class: "form-control", placeholder: "Published" %>
+    <%= form.label :published, class: "form-control", placeholder: "Published" %>
+  </fieldset>
+  <div class="text-center">
+    <%= form.submit class: "btn btn-primary" %>
   </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address, id: :organization_address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :overview %>
-    <%= form.text_area :overview, id: :organization_overview %>
-  </div>
-
-  <div class="field">
-    <%= form.label :employees %>
-    <%= form.number_field :employees, id: :organization_employees %>
-  </div>
-
-  <div class="field">
-    <%= form.label :tech_team_size %>
-    <%= form.number_field :tech_team_size, id: :organization_tech_team_size %>
-  </div>
-
-  <div class="field">
-    <%= form.label :website %>
-    <%= form.text_field :website, id: :organization_website %>
-  </div>
-
-  <div class="field">
-    <%= form.label :twitter %>
-    <%= form.text_field :twitter, id: :organization_twitter %>
-  </div>
-
-  <div class="field">
-    <%= form.label :logo %>
-    <%= form.file_field :logo, id: :organization_logo %>
-  </div>
-
-  <div class="field">
-    <%= form.label :published %>
-    <%= form.check_box :published, id: :organization_published %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
+  <% end %>
