--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: user, local: true) do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <h4><%= pluralize(user.errors.count, "error") %> prohibited this user from being saved:</h4>
 
       <ul>
       <% user.errors.full_messages.each do |message| %>
@@ -11,38 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name, id: :user_first_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name, id: :user_last_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :user_email %>
-  </div>
-
-  <div class="field">
-    <%= form.label :password %>
-    <%= form.password_field :password %>
-  </div>
-
-  <div class="field">
-    <%= form.label :password_confirmation %>
-    <%= form.password_field :password_confirmation %>
-  </div>
-
-  
-  <div class="field">
-    <%= form.label :is_admin %>
-    <%= form.check_box :is_admin, id: :user_is_admin %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <fieldset>
+    <%= form.text_field :first_name, class: "form-control", placeholder: "First name" %>
+  </fieldset>
+  <fieldset>
+    <%= form.text_field :last_name, class: "form-control", placeholder: "Last name" %>
+  </fieldset>
+  <fieldset>
+    <%= form.email_field :email, class: "form-control", placeholder: "Email" %>
+  </fieldset>
+  <fieldset>
+    <%= form.password_field :password, class: "form-control", placeholder: "Password" %>
+  </fieldset>
+  <fieldset>
+    <%= form.password_field :password_confirmation, class: "form-control", placeholder: "Password confirmation" %>
+  </fieldset>
+  <fieldset>
+    <%= form.label :is_admin, 'Is administrator?' %>
+    <%= form.check_box :is_admin %>
+  </fieldset>
+  <div class="text-center">
+    <%= form.submit 'Submit', class: "btn btn-primary" %>
   </div>
 <% end %>
