--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Users</h1>
+<div class="row justify-content-center">
+  <div class="section-header text-center">
+    <h2 class="title">Users</h2>
+  </div>
 
 <table>
   <thead>
@@ -31,3 +34,4 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+</div>
