--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -177,7 +177,7 @@ ul, ol {
 
 .section-header {
     position: relative;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
 }
 
 .section-header .title {
@@ -199,10 +199,9 @@ ul, ol {
 
 /* --  Input  -- */
 
-input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="date"], input[type="url"], input[type="tel"], textarea {
+/*input[type="text"], input[type="email"], input[type="password"], input[type="number"], input[type="date"], input[type="url"], input[type="tel"], textarea {
     height: 40px;
     width: 100%;
-    border: none;
 	background: #F4F4F4;
     border-bottom: 2px solid #EEE;
     color: #354052;
@@ -210,7 +209,7 @@ input[type="text"], input[type="email"], input[type="password"], input[type="num
     opacity: 0.5;
     -webkit-transition: 0.2s border-color, 0.2s opacity;
     transition: 0.2s border-color, 0.2s opacity;
-}
+}*/
 
 textarea {
     padding: 10px 10px;
@@ -218,10 +217,10 @@ textarea {
     resize: vertical;
 }
 
-input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, input[type="number"]:focus, input[type="date"]:focus, input[type="url"]:focus, input[type="tel"]:focus, textarea:focus {
+/*input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, input[type="number"]:focus, input[type="date"]:focus, input[type="url"]:focus, input[type="tel"]:focus, textarea:focus {
     border-color: #6195FF;
     opacity: 1;
-}
+}*/
 
 /* --  Buttons  -- */
 
