--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Events</h1>
+<div class="row justify-content-center">
+  <div class="section-header text-center">
+    <h2 class="title">Events</h2>
+  </div>
 
 <div id="calendar"></div>
 <script type="text/javascript">
@@ -16,6 +19,12 @@ $('#calendar').fullCalendar({
   // selectHelper: true
 });
 </script>
+
+<hr>
+
+  <div class="section-header text-center">
+    <h2 class="title">Events List</h2>
+  </div>
 
 <table class="table table-striped">
   <thead>
@@ -39,7 +48,4 @@ $('#calendar').fullCalendar({
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%#= link_to 'New Event', new_event_path %>
+</div>
