--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Organization</h1>
+<div class="row justify-content-center">
+  <div class="section-header text-center">
+    <h2 class="title">Editing Organization</h2>
+  </div>
 
+  <div class="col-xs-2 col-sm-3"></div>
+  <div class="col-xs-8 col-sm-6 form">
 <%= render 'form', organization: @organization %>
 
 <%= link_to 'Show', @organization %> |
 <%= link_to 'Back', organizations_path %>
+</div>
+</div>
