--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,4 +1,5 @@
-<% if @markers %>
+<% if @isMarkersGood %>
+  <p><% @markers %></p>
   <div style='width: 100%;'>
     <div id="myMap" style='width: 100%; height: 400px;'></div>
   </div>
@@ -9,7 +10,7 @@
       markers = handler.addMarkers(<%= raw @markers.to_json %>);
       handler.bounds.extendWith(markers);
       handler.fitMapToBounds();
-      handler.getMap().setZoom(14);
+      handler.getMap().setZoom(11);
     });
   </script>
 <% end %>
