--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Organization</h1>
+<div class="row justify-content-center">
+  <div class="section-header text-center">
+    <h2 class="title">New Organization</h2>
+  </div>
 
-<%= render 'form', organization: @organization %>
+  <div class="col-xs-2 col-sm-3"></div>
+  <div class="col-xs-8 col-sm-6 form">
 
-<%= link_to 'Back', organizations_path %>
+  <%= render 'form', organization: @organization %>
+
+<%= link_to 'Back', organizations_path, class: "btn btn-info" %>
+</div>
+</div>
