Fix typo on file name

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -3,7 +3,7 @@
     <h2 class="title">News</h2>
   </div>
 
-  <%= render 'search_aritcle_form' %>
+  <%= render 'search_article_form' %>
   <!-- Main -->
 
   <% @filtered_article_arr.each do |article| %>
