Can create EVENT if current_user.organizations.present?

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @event, :url => {:action => 'create',
-                                    :controller => 'admin/events'} do |form| %>
+                                    :controller => 'events'} do |form| %>
 
 
   <div class="field">
