--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
             <% if user_signed_in? %>
             <!-- TODO connect hrefs/links with their respective actions -->
   					<li class="has-dropdown"><a href="#blog"><%= current_user.first_name %></a>
+              <li><%= link_to 'Create Event', new_organization_event_path(current_user) %></li>
   						<ul class="dropdown">
   							<% if current_user.is_admin? %>
                   <li><%= link_to("Organizations admin", admin_organizations_path) %></li>
