change styling of checkbox on admin form

--- a/app/views/admin/organizations/_form.html.erb
+++ b/app/views/admin/organizations/_form.html.erb
@@ -26,8 +26,8 @@
     <%= form.file_field :logo, class: "form-control", placeholder: "Logo" %>
   </fieldset>
   <fieldset>
-    <%= form.check_box :published, class: "form-control", placeholder: "Published" %>
-    <%= form.label :published, class: "form-control", placeholder: "Published" %>
+    <%= form.check_box :published, class: "", placeholder: "Published" %>
+    <%= form.label :published, class: "", placeholder: "Published" %>
   </fieldset>
   <div class="text-center">
     <%= form.submit class: "btn btn-primary" %>
