change checkbox styling on admin panels

--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -13,8 +13,8 @@
     <%= form.password_field :password, class: "form-control", placeholder: "Password", autocomplete: "off" %>
   </fieldset>
   <fieldset>
-    <%= form.check_box :is_admin, class: "form-control", placeholder: "Is Admin?" %>
-    <%= form.label :is_admin, class: "form-control", placeholder: "Is Admin?" %>
+    <%= form.check_box :is_admin, class: "", placeholder: "Is Admin?" %>
+    <%= form.label :is_admin, class: "", placeholder: "Is Admin?" %>
   </fieldset>
   <div class="text-center">
     <%= form.submit class: "btn btn-primary" %>
