Add link to go back to events_path from an event show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,12 +31,5 @@
     data: {confirm: 'Are you sure?'},
     method: :delete
   ) %>
+  <%= link_to 'Back', events_path %>
 <% end %>
-
-
-<%#= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %>
-
-<!--
-Commented out below links as they are not yet set up
-<%#= link_to 'Edit', edit_event_path(@event) %> |
-<%#= link_to 'Back', events_path %> -->
