--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -3,7 +3,7 @@
     <h2 class="title">Users (Admin)</h2>
   </div>
 
-  <%= render 'users/form', user: @user %>
+  <%= render 'form', user: @user %>
 
   <hr>
 
