--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -23,7 +23,7 @@
     <tbody>
       <% @events.each do |event| %>
         <tr>
-          <td><%= link_to event.title, event_path(event), method: :show %></td>
+          <td><%= link_to event.title, event_path(event) %></td>
           <td><%= event.description %></td>
           <td><%= event.location %></td>
           <td><%= event.created_at %></td>
