--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,8 +3,25 @@
     <h2 class="title">User</h2>
   </div>
 
-  <div class="col-xs-2 col-sm-3"></div>
-  <div class="col-xs-8 col-sm-6 form">
-    <%= render 'form', user: @user %>
-  </div>
+  <p>
+    <strong>Name:</strong>
+    <%= @user.full_name %>
+  </p>
+
+  <p>
+    <strong>Name:</strong>
+    <%= @user.email %>
+  </p>
+
+  <% if @user.organizations.present? %>
+  <p>
+    <strong>Organization:</strong>
+    <%= @user.organizations.first.name %>
+  </p>
+  <% end %>
+
+  <p>
+    <strong>Name:</strong>
+    <%= @user.full_name %>
+  </p>
 </div>
