--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -238,7 +238,7 @@
   	<!-- /Footer -->
 
   	<!-- Back to top -->
-  	<div id="back-to-top"></div>
+  	<a href="#" id="back-to-top"></a>
 
     <!-- Preloader -->
   	<div id="preloader">
