--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -13,13 +13,14 @@
 
   <table class="table table-striped">
     <thead>
-      <tr>
-        <th scope="col">Event Title</th>
+      <tr class="">
+        <th scope="col">Event</th>
         <th scope="col">Description</th>
         <th scope="col">Location</th>
-        <th scope="col" nowrap>Created At</th>
+        <th scope="col">Created</th>
       </tr>
     </thead>
+
     <tbody>
       <% @events.each do |event| %>
         <tr>
@@ -33,4 +34,4 @@
       <% end %>
     </tbody>
   </table>
-</div>
+  </div>
