--- a/app/views/organizations/edit.html.erb
+++ b/app/views/organizations/edit.html.erb
@@ -7,7 +7,6 @@
   <div class="col-xs-8 col-sm-6 form">
 <%= render 'form', organization: @organization %>
 
-<%= link_to 'Show', @organization %> |
-<%= link_to 'Back', organizations_path %>
+<%= link_to 'My Organization', @organization %> |
 </div>
 </div>
