--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -48,15 +48,13 @@
   <strong>Published:</strong>
   <%= @organization.published %>
 </p>
-<% if can?(:crud, @organization) %>
-  <div class="section-header text-center">
-    <h2 class="title">Update Organization</h2>
-  </div>
-  <%= render 'edit_form' %>
-<% end %>
-
-<%= link_to 'Delete Organization', organization_path(@organization),
-                        method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger"  %>
-
-<%= link_to 'Back', organizations_path, class: "btn btn-info" %>
+  <% if can?(:crud, @organization) %>
+    <div class="section-header text-center">
+      <h2 class="title">Update Organization</h2>
+    </div>
+    <%= render 'edit_form' %>
+    <!-- Moved delete button to edit form template <%= link_to 'Delete My Organization',
+      organization_path(@organization),
+      method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger"  %> -->
+  <% end %>
 </div>
