--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="section-header text-center">
-    <h2 class="title">Events</h2>
+    <h2 class="title">Events (Admin)</h2>
   </div>
 
   <%= render 'form', event: @event %>
@@ -8,7 +8,7 @@
   <hr>
 
   <div class="section-header text-center">
-    <h2 class="title">Events List</h2>
+    <h2 class="title">Events List (Admin)</h2>
   </div>
 
   <table class="table table-striped">
