--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
 
     <%= link_to 'Edit Account', edit_user_path(current_user), class: "btn btn-primary"  %>
 
-    <%= link_to 'Delete Account', user_path(current_user),
+    <%= link_to 'Delete Account', user_path(@user),
     method: :delete, data: {confirm: 'Are you sure?'}, class: "btn btn-danger"  %>
   </div>
 
